--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="links" id="product"><a href="#">Products</a></li>
                 <li class="links" id="contact"><a href="#">Contact</a></li>
                 <li class="links" id="cart" onclick='document.querySelector(".cart").style.display = "block"'><a
-                        href="#"><i class="fas fa-shopping-cart"></i></a></li>
+                        href="#"><i class="fas fa-shopping-cart"></i><span id="cartIconQuantity"></span></a></li>
             </ul>
         </div>
     </header>
@@ -32,7 +32,8 @@
         <section id="cartBar" class="cart">
             <div id="cartInfo">
                 <p><span id="yourCart">Your Cart</span><span id="isEmpty">is empty.</span></p>
-                <button id="closeCart" onclick='document.querySelector(".cart").style.display = "none"'><i class="fas fa-chevron-up"></i></button>
+                <button id="closeCart" onclick='document.querySelector(".cart").style.display = "none"'><i
+                        class="fas fa-chevron-up"></i></button>
             </div>
             <ul id="cartList">
                 <li>Sample</li>
@@ -42,136 +43,128 @@
                 <li>Total</li>
                 <li>Remove</li>
             </ul>
-            <!-- <ul class="productCartList" id="listItem1">
-                <li><img src="https://picsum.photos/id/620/600/400" alt=""></li>
-                <li class="cartTitle">Philips kulaklık</li>
-                <li>35.99₺</li>
-                <li><input type="number" value="2" name="" id=""></li>
-                <li>72</li>
-                <li><button>X</button></li>
-            </ul> -->
         </section>
         <div class="productAndDescription">
             <section class="mainPage">
                 <div class="products" id="product0" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.1</p><img src="https://picsum.photos/id/620/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product1" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.2</p><img src="https://picsum.photos/id/680/600/400"
                         alt="">
-                    <p class="price">64.99₺</p>
+                    <p class="price">64.99 €</p>
                 </div>
                 <div class="products" id="product2" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.3</p><img src="https://picsum.photos/id/681/600/400"
                         alt="">
-                    <p class="price">74.99₺</p>
+                    <p class="price">74.99 €</p>
                 </div>
                 <div class="products" id="product3" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.4</p><img src="https://picsum.photos/id/682/600/400"
                         alt="">
-                    <p class="price">84.99₺</p>
+                    <p class="price">84.99 €</p>
                 </div>
                 <div class="products" id="product4" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.5</p><img src="https://picsum.photos/id/683/600/400"
                         alt="">
-                    <p class="price">94.99₺</p>
+                    <p class="price">94.99 €</p>
                 </div>
                 <div class="products" id="product5" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.6</p><img src="https://picsum.photos/id/684/600/400"
                         alt="">
-                    <p class="price">104.99₺</p>
+                    <p class="price">104.99 €</p>
                 </div>
                 <div class="products" id="product6" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/685/600/400"
                         alt="">
-                    <p class="price">110.99₺</p>
+                    <p class="price">110.99 €</p>
                 </div>
                 <div class="products" id="product7" onclick="choose(this.id)">
                     <p class=" title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/686/600/400"
                         alt="">
-                    <p class="price">124.99₺</p>
+                    <p class="price">124.99 €</p>
                 </div>
                 <div class="products" id="product8" onclick="choose(this.id)">
                     <p class=" title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/687/600/400"
                         alt="">
-                    <p class="price">123.99₺</p>
+                    <p class="price">123.99 €</p>
                 </div>
                 <div class="products" id="product9" onclick="choose(this.id)">
                     <p class=" title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/688/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product10" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/689/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product11" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/690/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product12" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/691/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product13" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/692/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product14" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/693/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product15" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/694/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product16" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/695/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product17" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/696/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product18" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/675/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product19" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/698/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product20" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/699/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product21" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/670/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product22" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/671/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
                 <div class="products" id="product23" onclick="choose(this.id)">
                     <p class="title">Lorem ipsum dolor sit amet.</p><img src="https://picsum.photos/id/672/600/400"
                         alt="">
-                    <p class="price">54.99₺</p>
+                    <p class="price">54.99 €</p>
                 </div>
 
             </section>
@@ -179,7 +172,7 @@
                 <button id="closer"><i class="fas fa-chevron-right"></i></button>
                 <img src="https://picsum.photos/id/680/600/400" alt="">
                 <p id="asideTitle">Philips 24" Full HD IPS Monitor</p>
-                <p>99,99 ₺</p>
+                <p>99,99 €</p>
                 <div>
                     <div class="quantity">
                         <p class="asideDescText">Quantity</p>
@@ -187,15 +180,17 @@
                     </div>
                     <div>
                         <p class="asideDescText">Total</p>
-                        <p>109.98₺</p>
+                        <p>109.98 €</p>
                     </div>
-                    <a id="addToCart" href="#header" onclick="addToCart()">Add to Cart</a>
+                    <a id="addToCart" onclick="addToCart()">Add to Cart</a>
                 </div>
                 <p id="asideDescription">Description</p>
             </aside>
         </div>
     </main>
-    <footer></footer>
+    <footer>
+        <h3>Halil <span>&</span> Yusuf</h3>
+    </footer>
 
 </body>
 
